# NFI_BackTestEngine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fixture-storage.yml  nfi-compatibility.yml  promote-release.yml  publish-release-candidate.yml  release.yml
benchmarks/: README.md  run_fixture.ps1
benchmarks/evidence/: host-scaling-x7-prepare-2026-07-19.json  x7-80pair-spot-2025h2-parity-2026-07-20.json  x7-80pair-spot-5y-native-2026-07-20.json  x7-80pair-spot-5y-official-oom-2026-07-20.json  x7-ape-aave-shared-slot-v17.4.413.json  x7-ape-futures-2022-v17.4.413.json  x7-ape-futures-2022-v17.4.418.json  x7-ape-rebuy-exit-v17.4.413.json  x7-ape-top-coins-v17.4.413.json  x7-v17.4.413-static-entry-inventory.json  x7-zec-legacy-grind-v17.4.413.json
benchmarks/fixtures/captured/normal-routing-spot-2025-01-01_04/: manifest.json
benchmarks/fixtures/captured/normal-routing-spot-2025-01-01_04/artifacts/: state-projection.nfitrace  trade-surface.json
benchmarks/fixtures/captured/normal-routing-spot-2025-01-01_04/inputs/: config.json  strategy.py
benchmarks/fixtures/captured/stops-only-spot-2025-01-01_04/: manifest.json
benchmarks/fixtures/captured/stops-only-spot-2025-01-01_04/artifacts/: state-projection.nfitrace  trade-surface.json
benchmarks/fixtures/captured/x7-compound-tag-futures-v17.4.421-2022-04-29_05-02/: manifest.json
benchmarks/fixtures/captured/x7-compound-tag-futures-v17.4.421-2022-04-29_05-02/artifacts/: coverage-report.json  state-projection.nfitrace  trade-surface.json
benchmarks/fixtures/captured/x7-compound-tag-futures-v17.4.421-2022-04-29_05-02/inputs/: config.json  strategy.py
benchmarks/fixtures/captured/x7-cooldown-lock-spot-v17.4.421-2023-01-01_16/: manifest.json
benchmarks/fixtures/captured/x7-cooldown-lock-spot-v17.4.421-2023-01-01_16/artifacts/: coverage-report.json  state-projection.nfitrace  trade-surface.json
benchmarks/fixtures/captured/x7-cooldown-lock-spot-v17.4.421-2023-01-01_16/inputs/: strategy.py
benchmarks/fixtures/captured/x7-liquidation-stoploss-guard-futures-v17.4.421-2022-04-29_05-02/: manifest.json
benchmarks/fixtures/captured/x7-liquidation-stoploss-guard-futures-v17.4.421-2022-04-29_05-02/artifacts/: coverage-report.json  state-projection.nfitrace  trade-surface.json
benchmarks/fixtures/captured/x7-liquidation-stoploss-guard-futures-v17.4.421-2022-04-29_05-02/inputs/: config.json  strategy.py
benchmarks/fixtures/captured/x7-low-profit-lock-spot-v17.4.421-2023-01-01_16/: manifest.json
benchmarks/fixtures/captured/x7-max-drawdown-lock-spot-v17.4.421-2023-01-01_16/: manifest.json
benchmarks/fixtures/captured/x7-tag121-spot-v17.4.421-2023-01-01_02/: manifest.json
benchmarks/fixtures/captured/x7-tag121-spot-v17.4.421-2023-01-01_02/inputs/: config.json  (+1 more)
benchmarks/fixtures/captured/x7-variable-leverage-futures-v17.4.421-2021-02-04_09/: manifest.json
benchmarks/fixtures/contract/normal-routing/: freqtrade-result.json  manifest.json  trade-surface.json
benchmarks/fixtures/contract/stops-only/: freqtrade-result.json  manifest.json  trade-surface.json
benchmarks/reference/: config-spot.json  slice_feather.py
benchmarks/reference/strategies/: ContractStopsOnly.py
benchmarks/reference/tracer/: nfi_reference_trace.py  sitecustomize.py
docs/: architecture.md  release.md  x7-support.md
examples/: batch-v1.example.json
python/nfi_backtest_engine/: __init__.py  _rust.pyi  batch_runner.py  benchmark.py  branch_coverage.py  cache.py  callback_lowering.py  canonical.py  certification.py  cli.py  config_loader.py  confirmation.py  data_seal.py  docker_resources.py  docker_runtime.py  doctor.py  engine_runtime.py  errors.py  evidence_bundle.py  fixture.py  fixture_capture.py  fixture_engine.py  full_x7_certification.py  full_x7_resume.py  generic_adapter.py  hardware.py  hash_index.py  hot_ir.py  market_precision.py  market_snapshot.py  mismatch_replay.py  nfi_trade_manager.py  normalize.py  object_storage.py  parity.py  performance_gate.py  platform_benchmark.py  probe_capture.py  probe_strategy.py  product_contract.py  (+26 more)
python/nfi_backtest_engine/reference_tracer/: __init__.py  nfi_reference_storage.py  nfi_reference_trace.py  sitecustomize.py
python/nfi_backtest_engine/schemas/: __init__.py  benchmark-fixture-v2.schema.json  benchmark-fixture-v3.schema.json  benchmark-fixture.schema.json  certification-report-v1.schema.json  full-x7-certification-v1.schema.json  trade-surface-v2.schema.json  trade-surface.schema.json
rust/: Cargo.toml
rust/crates/nfi-py/: Cargo.toml  build.rs
rust/crates/nfi-py/src/: lib.rs
rust/crates/nfi-sim-cli/: Cargo.toml
rust/crates/nfi-sim-cli/src/: main.rs
rust/crates/nfi-sim-core/: Cargo.toml
rust/crates/nfi-sim-core/src/: lib.rs  nfi_adjustment.rs  nfi_legacy_grind.rs  nfi_rebuy.rs  nfi_regular_adjustment.rs  protections.rs
rust/crates/nfi-vector-io/: Cargo.toml
rust/crates/nfi-vector-io/src/: lib.rs
tests/: test_batch_runner.py  test_cache.py  test_certification.py  test_cli.py  test_compact_candles.py  test_config_loader.py  test_confirmation.py  test_data_seal.py  test_docker_runtime.py  test_engine_runtime.py  test_evidence.py  test_evidence_bundle.py  test_fixture.py  test_fixture_capture.py  test_fixture_engine.py  test_fixture_v2.py  test_fixture_v3.py  test_full_x7_certification.py  test_generic_adapter.py  test_hardware.py  test_hash_index.py  test_hot_ir.py  test_market_precision.py  test_market_snapshot.py  test_mismatch_replay.py  test_nfi_trade_manager.py  test_package_version.py  test_performance_gate.py  test_platform_benchmark.py  test_probe_capture.py  test_probe_strategy.py  test_product_contract.py  test_profiling.py  test_project_setup.py  test_reference_assets.py  test_reference_runtime.py  test_reference_tracer.py  test_release_inputs.py  test_research_reference.py  test_research_runner.py  (+10 more)
tests/parity/: test_exact_parity.py  test_normalize.py  test_normalize_v2.py  test_state_trace.py
(+64 files in other folders)
