[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "nfi-backtest-engine"
version = "1.0.0"
description = "Exact-parity research backtesting infrastructure for NFI strategies"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "vntrevx" },
]
keywords = ["backtesting", "freqtrade", "nfi", "rust", "trading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Typing :: Typed",
]
dependencies = [
    "blake3==1.0.9",
    "ccxt==4.5.55",
    "jsonschema==4.26.0",
    "numpy==2.4.5",
    "pandas==3.0.3",
    "polars==1.42.1",
    "psutil==7.2.2",
    "pyarrow==24.0.0",
    "python-rapidjson==1.23",
    "TA-Lib==0.6.8",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.29",
    "maturin>=1.9,<2",
    "pytest>=8,<10",
    "ruff>=0.6",
]

[project.scripts]
nfi-bte = "nfi_backtest_engine.cli:main"

[project.urls]
Homepage = "https://github.com/vntrevx/NFI_BackTestEngine"
Issues = "https://github.com/vntrevx/NFI_BackTestEngine/issues"
Repository = "https://github.com/vntrevx/NFI_BackTestEngine.git"

[tool.maturin]
manifest-path = "rust/crates/nfi-py/Cargo.toml"
python-source = "python"
module-name = "nfi_backtest_engine._rust"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["python"]

[tool.basedpyright]
include = ["python/nfi_backtest_engine"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
failOnWarnings = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["benchmarks/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
