[workspace]
members = [
    "crates/nfi-sim-core",
    "crates/nfi-vector-io",
    "crates/nfi-sim-cli",
    "crates/nfi-py",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"
repository = "https://github.com/vntrevx/NFI_BackTestEngine"
homepage = "https://github.com/vntrevx/NFI_BackTestEngine"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
