[package]
name = "nfi-py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "_rust"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nfi-sim-core = { path = "../nfi-sim-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"

[lints]
workspace = true
