[package]
name = "nfi-py"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PyO3 native module for NFI Backtest Engine"

[lib]
name = "_rust"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nfi-sim-core = { path = "../nfi-sim-core" }
nfi-vector-io = { path = "../nfi-vector-io" }
pyo3 = { version = "0.29", features = ["abi3-py312", "extension-module"] }
serde_json = "1"

[build-dependencies]
sha2 = "0.11"

[lints]
workspace = true
