[package]
name = "nfi-sim-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JSON, Feather-manifest, and JSONL process boundary for NFI Backtest Engine"

[[bin]]
name = "nfi-sim"
path = "src/main.rs"

[dependencies]
nfi-sim-core = { path = "../nfi-sim-core" }
nfi-vector-io = { path = "../nfi-vector-io" }
serde_json = "1"

[lints]
workspace = true
