[package]
name = "nfi-sim-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rust_decimal = { version = "1", default-features = false }

[lints]
workspace = true
