[package]
name = "nfi-vector-io"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Verified Feather transport for NFI Backtest Engine"

[lib]
path = "src/lib.rs"

[dependencies]
arrow2 = { version = "0.18", features = ["io_ipc", "io_ipc_compression"] }
nfi-sim-core = { path = "../nfi-sim-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[lints]
workspace = true
